# blender_omniverse

./: .gitignore  .mcp.json  CLAUDE.md  PROJECT_PLAN.md  pyproject.toml
.claude/: settings.local-Z4G5.json
.history/: PROJECT_PLAN_20260326222236.md
assets/specimens/checkerboard_10mm/: checkerboard_10mm.manifest.yaml  checkerboard_10mm.recipe.py
configs/: sensor_gmax0505.yaml
docs/: BLENDER_MCP_SETUP.md  CLAUDE.md  INSTALL-Z4G5.md  INSTALL.md  changelog.md  manifest_schema.md
src/cam_sim/: __init__.py  pipeline.py
src/cam_sim/lens/: CLAUDE.md  NOTES.md
src/cam_sim/render/: CLAUDE.md  NOTES.md  postprocess.py
src/cam_sim/scene/: CLAUDE.md  NOTES.md  __init__.py  usd_export.py
src/cam_sim/sensor/: CLAUDE.md  NOTES.md  spec.py
tests/: CLAUDE.md
