[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cam_sim"
version = "0.1.0"
description = "Omniverse 기반 공학적 카메라 이미지 모델링 파이프라인"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
